fix heart icon display on mobile

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -43,6 +43,7 @@ body {
 
   .clap {
     right: 10px;
+    margin-top: 30px;
   }
 
   .counter_global {
